# bio_research_tool

./: .gitignore  README.md  pyproject.toml
backend/: pyproject.toml
backend/app/: graph.py  main.py
backend/research/: testing.ipynb
frontend/: Cargo.toml
frontend/src/: main.rs  models.rs  requests.rs  ui.rs
