[tool.poetry]
name        = "backend"
version     = "0.1.0"
description = ""
readme      = "README.md"
authors     = ["Anton <anton.andrei.ro@gmail.com>"]
packages = [
  { include = "app" }
]

[tool.poetry.dependencies]
python  = ">=3.9"
fastapi = ">=0.115.12,<0.116.0"
uvicorn = ">=0.34.2,<0.35.0"

[build-system]
requires    = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
