[package]
name = "frontend"
version = "0.1.0"
edition = "2024"

[dependencies]
eframe = { version = "0.31", features = ["glow"] }
egui_extras = "0.31"
polars = { version = "0.32", default-features = false, features = ["csv"] }
egui_plot = "0.31"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rfd = "0.12"
reqwest = { version = "0.11", features = ["blocking", "json", "multipart"] }
futures = "0.3.31"